@@ -1,3 +1,8 @@
+2012-10-13  Niibe Yutaka  <gniibe@fsij.org>
+
+	* boards/STBEE_MINI/board.c [!DFU_SUPPORT] (boardInit): Don't run
+	when "user switch" is pushed.  This is for JTAG/SWD debugger.
+
 2012-10-12  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/main.c (neug_setup): Support neug_*_max.
